--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-native-safe-area-context": "^0.7.2",
     "react-native-screens": "^2.0.0-beta.2",
     "react-native-skeleton-content-nonexpo": "^1.0.4",
+    "react-native-youtube": "^2.0.0",
     "react-navigation": "^4.1.0",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.1.0",
