--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "^1.7.1",
     "@react-native-community/masked-view": "^0.1.6",
+    "@react-native-community/netinfo": "^5.5.0",
     "axios": "^0.19.2",
     "base-64": "^0.1.0",
     "jetifier": "^1.6.5",
@@ -29,6 +30,7 @@
     "react-navigation": "^4.1.0",
     "react-navigation-drawer": "^2.3.3",
     "react-navigation-stack": "^2.1.0",
+    "react-navigation-tabs": "^2.7.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "redux-persist": "^6.0.0"
